<resources>
    //translatable false 表示不参与国际化 但必须默认写在默认的string.xml里面,意思就是不管系统是什么语言,它都只显示xx。
    <string name="app_name">ShareKart</string>
    <string name="SMS">SMS</string>
    <string name="Password_Login">Password Login</string>
    <string name="Facebook_Login">Facebook Login</string>
    <string name="activity_login_sms_phone_title">Enter Your Mobile Number</string>
    <string name="activity_login_find_phone_title">Find Your Account</string>
    <string name="activity_login_link_phone_title">Link Your Mobile Number</string>
    <string name="activity_login_sms_phone_top_hint">We need to text you the OTP to authenticate your account</string>
    <string name="activity_login_find_phone_top_hint">Please enter your phone number to search for your account</string>
    <string name="activity_login_link_phone_top_hint">Provide your phone number to link with facebook on “ICE”</string>
    <string name="Country_Code">Country Code</string>
    <string name="add_nine_one">+91</string>
    <string name="Phone_number">Phone number</string>
    <string name="mobile_number">mobile number</string>
    <string name="activity_login_sms_phone_bottom_hint">by continuing,you accept the privace policy and terms of service.An SMS will be sent to you with the OTP to verify your number.\nSMS and data rates may apply.</string>
    <string name="Next">Next</string>
    <string name="activity_login_password_title">Enter Your Mobile Number and Password</string>
    <string name="activity_login_forgot_title">Create a New Password</string>
    <string name="activity_login_forgot_top_hint">Creat a new password.you’ll use this password to access your account.</string>
    <string name="password">password</string>
    <string name="new_password">Thpe a new password</string>
    <string name="new_password_again">Thpe the new password again</string>
    <string name="ForgotPassword">ForgotPassword?</string>
    <string name="activity_login_forgot_bottom_hint">Enter a combination of at least six numbers,letters.</string>
    <string name="Login_Successful">Login Successful</string>
    <string name="tips_Verification_smsCode">Enter Verification Code</string>
    <string name="has_been_sent">We have sent an OTP on your number</string>
    <string name="Resend">Resend OTP in</string>
    <string name="Didn">Didn’t receive OTP? </string>
    <string name="Change_Number">Change Number</string>

    <string name="facebook_app_id">2257006284432163</string>
    <string name="fb_login_protocol_scheme">fb2257006284432163</string>
</resources>