<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginPasswordActivity"
            type="com.hx.ice.act.login.ui.LoginPasswordActivity" />

        <variable
            name="onClickUtil"
            type="com.hx.ice.util.ListenerUtil" />

        <import type="com.hx.ice.constants.IceConstants" />

        <import type="android.view.View" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".act.login.ui.LoginPasswordActivity">

        <include layout="@layout/title_layout" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_28"
            android:layout_marginTop="@dimen/dp_24"
            android:layout_marginEnd="@dimen/dp_24"
            android:text="@{loginPasswordActivity.title}"
            android:textColor="@color/color_222222"
            android:textSize="@dimen/sp_26" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_28"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_marginEnd="@dimen/dp_28"
            android:text="@string/activity_login_forgot_top_hint"
            android:textColor="@color/color_222222"
            android:textSize="@dimen/sp_14"
            android:visibility="@{loginPasswordActivity.activityType == IceConstants.Login_Forgot_Activity? View.VISIBLE : View.GONE}" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_28"
            android:layout_marginTop="@dimen/dp_36"
            android:layout_marginEnd="@dimen/dp_28"
            android:background="@drawable/login_sms_phone_bg"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_3"
                android:text="@string/add_nine_one"
                android:textColor="@color/color_222222"
                android:textSize="@dimen/sp_16"
                android:visibility="@{loginPasswordActivity.activityType == IceConstants.Login_Password_Activity? View.VISIBLE : View.GONE}" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@{loginPasswordActivity.phoneHint}"
                android:inputType="phone"
                android:maxLength="10"
                android:paddingLeft="@dimen/dp_16"
                android:paddingTop="@dimen/dp_14"
                android:paddingRight="@dimen/dp_16"
                android:paddingBottom="@dimen/dp_14"
                android:textColor="@color/color_222222"
                android:textColorHint="@color/color_CCCCCC"
                android:textSize="@dimen/sp_16" />

        </LinearLayout>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_28"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_28"
            android:background="@drawable/login_sms_phone_bg"
            android:hint="@{loginPasswordActivity.passwordHint}"
            android:maxLength="10"
            android:paddingLeft="@dimen/dp_16"
            android:paddingTop="@dimen/dp_14"
            android:paddingRight="@dimen/dp_16"
            android:paddingBottom="@dimen/dp_14"
            android:textColor="@color/color_222222"
            android:textColorHint="@color/color_CCCCCC"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/tv_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_28"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_28"
            android:onClick="@{onClickUtil.onClick}"
            android:text="@string/ForgotPassword"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/sp_12"
            android:visibility="@{loginPasswordActivity.activityType == IceConstants.Login_Password_Activity? View.VISIBLE : View.GONE}" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_28"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_28"
            android:text="@string/activity_login_forgot_bottom_hint"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/sp_12"
            android:visibility="@{loginPasswordActivity.activityType == IceConstants.Login_Forgot_Activity? View.VISIBLE : View.GONE}" />

        <ImageView
            android:id="@+id/iv_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_4"
            android:layout_marginTop="@dimen/dp_22"
            android:layout_marginEnd="@dimen/dp_4"
            android:onClick="@{onClickUtil.onClick}"
            android:scaleType="fitXY"
            android:src="@mipmap/login_continue_unable" />

    </LinearLayout>

</layout>